force-app/main/default/objects/Capability__c/Capability__c.object-meta.xml
<CustomObject>
    <label>Capability</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Capability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>