force-app/main/default/objects/Capability__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Loan_Applicant__r.Customer_Information__r.FirstName+&apos; &apos; +Loan_Applicant__r.Customer_Information__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>