force-app/main/default/objects/Capability__c/fields/Assumptions_for_Income__c.field-meta.xml
<CustomField>
    <fullName>Assumptions_for_Income__c</fullName>
    <label>Assumptions for Income</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>