force-app/main/default/objects/Capability__c/fields/Business_name__c.field-meta.xml
<CustomField>
    <fullName>Business_name__c</fullName>
    <label>Business Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>