force-app/main/default/objects/Capability__c/fields/Business_Nature__c.field-meta.xml
<CustomField>
    <fullName>Business_Nature__c</fullName>
    <label>Business Nature</label>
    <length>25</length>
    <type>Text</type>
</CustomField>