force-app/main/default/objects/Capability__c/fields/Business_pincode__c.field-meta.xml
<CustomField>
    <fullName>Business_pincode__c</fullName>
    <label>Business pincode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>