force-app/main/default/objects/Capability__c/fields/Business_Reference_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Reference_Contact_Number__c</fullName>
    <label>Business Reference Contact Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>