force-app/main/default/objects/Capability__c/fields/Business_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Reference_Name__c</fullName>
    <label>Business Reference Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>