force-app/main/default/objects/Capability__c/fields/Business_Reference_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Business_Reference_Remarks__c</fullName>
    <label>Business Reference Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>