force-app/main/default/objects/Capability__c/fields/BusinessPincode__c.field-meta.xml
<CustomField>
    <fullName>BusinessPincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Pincode</label>
    <referenceTo>MS_Pincode__c</referenceTo>
    <relationshipLabel>Capability</relationshipLabel>
    <relationshipName>Capability</relationshipName>
    <type>Lookup</type>
</CustomField>