force-app/main/default/objects/Capability__c/fields/Capability_AC_Check__c.field-meta.xml
<CustomField>
    <fullName>Capability_AC_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in PC/AC</description>
    <label>Capability AC Check</label>
    <type>Checkbox</type>
</CustomField>