force-app/main/default/objects/Capability__c/fields/Day_Margin_Basis__c.field-meta.xml
<CustomField>
    <fullName>Day_Margin_Basis__c</fullName>
    <label>Day/Margin Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day Basis</fullName>
            </value>
            <value>
                <fullName>Margin Basis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>