force-app/main/default/objects/Capability__c/fields/Electricity__c.field-meta.xml
<CustomField>
    <fullName>Electricity__c</fullName>
    <label>Electricity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>