force-app/main/default/objects/Capability__c/fields/Employment_Document_Proof__c.field-meta.xml
<CustomField>
    <fullName>Employment_Document_Proof__c</fullName>
    <label>Employment Document Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>