force-app/main/default/objects/Capability__c/fields/FC_Enquiry_with__c.field-meta.xml
<CustomField>
    <fullName>FC_Enquiry_with__c</fullName>
    <label>FC Enquiry With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Neighbour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>