force-app/main/default/objects/Capability__c/fields/Gross_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Monthly_Income__c</fullName>
    <formula>IF(
ISPICKVAL(Income_segment__c , &apos;Daily wages&apos;),
Income_per_day__c * Number_of_days__c,
IF((ISPICKVAL(Income_segment__c , &apos;Self Employed&apos;) || ISPICKVAL(Income_segment__c , &apos;Eateries&apos;) ||
ISPICKVAL(Income_segment__c , &apos;Food business&apos;) || ISPICKVAL(Income_segment__c , &apos;Manufacturing&apos;) ||
ISPICKVAL(Income_segment__c , &apos;Milk business&apos;) || ISPICKVAL(Income_segment__c , &apos;Shop owner&apos;) ||
ISPICKVAL(Income_segment__c , &apos;General shops&apos;) || ISPICKVAL(Income_segment__c , &apos;Vegetables/Fruits/Flower/Vendor&apos;)),
IF(ISPICKVAL(Day_Margin_Basis__c , &apos;Day Basis&apos;),
Income_per_day__c * Number_of_days__c ,
Margin_in_amount__c - (Electricity__c + Salary__c + Rent__c + Others__c))
,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>