force-app/main/default/objects/Capability__c/fields/Header_Need_to_Select_Particular_Option__c.field-meta.xml
<CustomField>
    <fullName>Header_Need_to_Select_Particular_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Header(Need to Select Particular Option)</label>
    <type>Checkbox</type>
</CustomField>