force-app/main/default/objects/Capability__c/fields/Income_per_day__c.field-meta.xml
<CustomField>
    <fullName>Income_per_day__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Income Per Day</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>