force-app/main/default/objects/Capability__c/fields/Income_per_month__c.field-meta.xml
<CustomField>
    <fullName>Income_per_month__c</fullName>
    <label>Income Per Month</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>