force-app/main/default/objects/Capability__c/fields/Income_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Income_Pincode__c</fullName>
    <label>Income Pincode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>