force-app/main/default/objects/Capability__c/fields/Income_reference_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Income_reference_Contact_Number__c</fullName>
    <label>Income Reference Contact Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>