force-app/main/default/objects/Capability__c/fields/Income_reference_name__c.field-meta.xml
<CustomField>
    <fullName>Income_reference_name__c</fullName>
    <label>Income Reference Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>