force-app/main/default/objects/Capability__c/fields/Income_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Income_Remarks__c</fullName>
    <label>Income Remarks</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>