force-app/main/default/objects/Capability__c/fields/IncomePincode__c.field-meta.xml
<CustomField>
    <fullName>IncomePincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income Pincode</label>
    <referenceTo>MS_Pincode__c</referenceTo>
    <relationshipLabel>Capability (Income Pincode)</relationshipLabel>
    <relationshipName>Capability1</relationshipName>
    <type>Lookup</type>
</CustomField>