force-app/main/default/objects/Capability__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>