force-app/main/default/objects/Capability__c/fields/Margin_in_amount__c.field-meta.xml
<CustomField>
    <fullName>Margin_in_amount__c</fullName>
    <formula>Sales_per_month__c /100 * Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin In Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>