force-app/main/default/objects/Capability__c/fields/Mode_of_Salary__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Salary__c</fullName>
    <label>Mode of Salary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Credit</fullName>
            </value>
            <value>
                <fullName>Cash Salary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>