force-app/main/default/objects/Capability__c/fields/Name_of_the_Employer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Employer__c</fullName>
    <label>Name Of The Employer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>