force-app/main/default/objects/Capability__c/fields/Nature_of_Document_Proof__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Document_Proof__c</fullName>
    <label>Nature of Document Proof</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ID card</fullName>
            </value>
            <value>
                <fullName>Pay Slip</fullName>
            </value>
            <value>
                <fullName>Letter from Employer</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>