force-app/main/default/objects/Capability__c/fields/Nature_of_Job__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Job__c</fullName>
    <label>Nature of Job</label>
    <length>80</length>
    <type>Text</type>
</CustomField>