force-app/main/default/objects/Capability__c/fields/Nature_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Ownership__c</fullName>
    <label>Nature of Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Not an Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>