force-app/main/default/objects/Capability__c/fields/Nature_of_Ownership_Proof__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Ownership_Proof__c</fullName>
    <label>Nature of Ownership Proof</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>GST Certificate</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Nameboard Matching</fullName>
            </value>
            <value>
                <fullName>Partnership Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>