force-app/main/default/objects/Capability__c/fields/Number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Days</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>