force-app/main/default/objects/Capability__c/fields/of_income_transacted_through_bank_acco__c.field-meta.xml
<CustomField>
    <fullName>of_income_transacted_through_bank_acco__c</fullName>
    <label>% of income transacted through bank acco</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>