force-app/main/default/objects/Capability__c/fields/Other_Confirmations__c.field-meta.xml
<CustomField>
    <fullName>Other_Confirmations__c</fullName>
    <label>Other Confirmations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Direct Visit</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Bank Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>