force-app/main/default/objects/Capability__c/fields/Other_Confirmations_Daily_Wages__c.field-meta.xml
<CustomField>
    <fullName>Other_Confirmations_Daily_Wages__c</fullName>
    <label>Other Confirmations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neighbour</fullName>
            </value>
            <value>
                <fullName>Direct Visit</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>