force-app/main/default/objects/Capability__c/fields/Overall_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Overall_Remarks__c</fullName>
    <label>Overall Remarks</label>
    <type>TextArea</type>
</CustomField>