force-app/main/default/objects/Capability__c/fields/Overall_Remarks_Regarding_Business__c.field-meta.xml
<CustomField>
    <fullName>Overall_Remarks_Regarding_Business__c</fullName>
    <label>Overall Remarks Regarding Business</label>
    <type>TextArea</type>
</CustomField>