force-app/main/default/objects/Capability__c/fields/Ownership_document_proof__c.field-meta.xml
<CustomField>
    <fullName>Ownership_document_proof__c</fullName>
    <label>Ownership Document Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy1</fullName>
            </value>
            <value>
                <fullName>Dummy2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>