force-app/main/default/objects/Capability__c/fields/Ownership_Proof_available__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Proof_available__c</fullName>
    <label>Ownership Proof Available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>