force-app/main/default/objects/Capability__c/fields/PC_FIV_C_Relationship__c.field-meta.xml
<CustomField>
    <fullName>PC_FIV_C_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PC FIV-C Relationship</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Capability</relationshipLabel>
    <relationshipName>Capability</relationshipName>
    <type>Lookup</type>
</CustomField>