force-app/main/default/objects/Capability__c/fields/Proof__c.field-meta.xml
<CustomField>
    <fullName>Proof__c</fullName>
    <label>Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>