force-app/main/default/objects/Capability__c/fields/Proof_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Ownership__c</fullName>
    <label>Proof of Ownership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deed</fullName>
            </value>
            <value>
                <fullName>Electricity bill</fullName>
            </value>
            <value>
                <fullName>House tax receipt</fullName>
            </value>
            <value>
                <fullName>Patta</fullName>
            </value>
            <value>
                <fullName>Khatha</fullName>
            </value>
            <value>
                <fullName>Adangal</fullName>
            </value>
            <value>
                <fullName>Khasra</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>