force-app/main/default/objects/Capability__c/fields/Proof_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Proof_Remarks__c</fullName>
    <label>Proof Remarks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FC confirmation</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Bank Credit in India</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
            <value>
                <fullName>Salary slip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>