force-app/main/default/objects/Capability__c/fields/Reference_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contact_Number__c</fullName>
    <label>Reference Contact Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>