force-app/main/default/objects/Capability__c/fields/regular_business_activity__c.field-meta.xml
<CustomField>
    <fullName>regular_business_activity__c</fullName>
    <label>Regular Business Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>