force-app/main/default/objects/Capability__c/fields/Remarks_if_any__c.field-meta.xml
<CustomField>
    <fullName>Remarks_if_any__c</fullName>
    <label>Remarks, If Any</label>
    <type>TextArea</type>
</CustomField>