force-app/main/default/objects/Capability__c/fields/Rental_Form__c.field-meta.xml
<CustomField>
    <fullName>Rental_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Form</label>
    <type>Checkbox</type>
</CustomField>