force-app/main/default/objects/Capability__c/fields/Rental_Income__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income__c</fullName>
    <label>Rental Income</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>