force-app/main/default/objects/Capability__c/fields/Rental_income_property_address__c.field-meta.xml
<CustomField>
    <fullName>Rental_income_property_address__c</fullName>
    <label>Rental Income Property Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>