force-app/main/default/objects/Capability__c/fields/Rental_Property_Owner_name__c.field-meta.xml
<CustomField>
    <fullName>Rental_Property_Owner_name__c</fullName>
    <label>Rental Property Owner Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>