force-app/main/default/objects/Capability__c/fields/Sales_per_day__c.field-meta.xml
<CustomField>
    <fullName>Sales_per_day__c</fullName>
    <label>Sales Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>