force-app/main/default/objects/Capability__c/fields/Sales_per_month__c.field-meta.xml
<CustomField>
    <fullName>Sales_per_month__c</fullName>
    <formula>Sales_per_day__c * Number_of_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>