force-app/main/default/objects/Capability__c/fields/Total_experience_in_this_business_yrs__c.field-meta.xml
<CustomField>
    <fullName>Total_experience_in_this_business_yrs__c</fullName>
    <label>Total Experience In This Business(yrs)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>