force-app/main/default/objects/Capability__c/fields/Total_Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Experience__c</fullName>
    <label>Total Work Experience</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>