force-app/main/default/objects/Capability__c/fields/Year_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Business__c</fullName>
    <label>Year of Business</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>