force-app/main/default/objects/Capability__c/fields/Year_of_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Occupation__c</fullName>
    <label>Year of Occupation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>