force-app/main/default/objects/Capability__c/fields/Year_of_Service_With_Employer__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Service_With_Employer__c</fullName>
    <label>Year of Service With Employer</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>