force-app/main/default/objects/Capability__c/recordTypes/AC_Capability.recordType-meta.xml
<RecordType>
    <fullName>AC_Capability</fullName>
    <active>true</active>
    <label>AC Capability</label>
</RecordType>