force-app/main/default/objects/Capability__c/recordTypes/FIV_C_Capability.recordType-meta.xml
<RecordType>
    <fullName>FIV_C_Capability</fullName>
    <active>true</active>
    <label>FIV-C Capability</label>
</RecordType>