force-app/main/default/objects/Capability__c/recordTypes/PC_Capability.recordType-meta.xml
<RecordType>
    <fullName>PC_Capability</fullName>
    <active>true</active>
    <label>PC Capability</label>
</RecordType>